Move QMainWindow contentMargins setting to polish

Never mutate a widget while painting! This causes recursive repaints and makes
prorgams crash. There is a reason why const_casts are discouraged.
BUG:432246
FIXED-IN: 5.21